--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </content>
     <footer>
         <small>
-            2017 // opensource player inside <a href="https://www.muses.org/" target="_blank">muses.org</a>
+            2017 // source code <a href="https://github.com/dvdn/webradios" target="_blank">dvdn/webradios</a>
         </small>
     </footer>
 </body>
