--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
                 </ul>
             </section>
             <section>
+                <h2 class="list-heading">Africa</h2>
+                <ul id="africa">
+                </ul>
+            </section>
+            <section>
                 <h2 class="list-heading">Soundtracks</h2>
                 <ul id="soundtracks">
                 </ul>
