funk & more radios

--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
                 </ul>
             </section>
             <section>
+                <h2 class="list-heading">Funk</h2>
+                <ul id="funk">
+                </ul>
+            </section>
+            <section>
                 <h2 class="list-heading">Reggea, ska</h2>
                 <ul id="reggae">
                 </ul>
@@ -45,7 +50,7 @@
                 </ul>
             </section>
             <section>
-                <h2 class="list-heading">Autre</h2>
+                <h2 class="list-heading">Divers</h2>
                 <ul id="other">
                 </ul>
             </section>
