--- a/index.html
+++ b/index.html
@@ -21,37 +21,42 @@
         <div id="webradios-lists">
             <section>
                 <h2 class="list-heading">Rock</h2>
-                <ul id="rock">
+                <ul class="rock">
                 </ul>
             </section>
             <section>
-                <h2 class="list-heading">Electronic</h2>
-                <ul id="electronic">
+                <h2 class="list-heading">Electronique</h2>
+                <ul class="electronic">
                 </ul>
             </section>
             <section>
                 <h2 class="list-heading">Funk</h2>
-                <ul id="funk">
+                <ul class="funk">
                 </ul>
             </section>
             <section>
-                <h2 class="list-heading">Reggea, ska</h2>
-                <ul id="reggae">
+                <h2 class="list-heading">Reggea, Ska</h2>
+                <ul class="reggae">
                 </ul>
             </section>
             <section>
-                <h2 class="list-heading">Africa</h2>
-                <ul id="africa">
+                <h2 class="list-heading">African, Latino</h2>
+                <ul class="african latino">
                 </ul>
             </section>
             <section>
-                <h2 class="list-heading">Soundtracks</h2>
-                <ul id="soundtracks">
+                <h2 class="list-heading">Bandes originales</h2>
+                <ul class="soundtracks">
                 </ul>
             </section>
             <section>
+                <h2 class="list-heading">Conversations</h2>
+                <ul class="talk">
+                </ul>
+            </section>
+             <section>
                 <h2 class="list-heading">Divers</h2>
-                <ul id="other">
+                <ul class="other">
                 </ul>
             </section>
         </div>
