metadata decoder init

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Webradios sweet selection</title>
     <script type="text/javascript" src="https://hosted.muses.org/mrp.js"></script>
+    <script type="text/javascript" src="metadata-decoder/metadata-decoder.js"></script>
     <script type="text/javascript" src="radioplayer.js"></script>
     <script type="text/javascript" src="webradios_care.js"></script>
     <link rel="stylesheet" type="text/css" href="main.css">
