determine broadcaster init

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
         <div id="player-wrapper">
             emplacement du player
             <script>returnPlayer();</script>
+            <button onclick="instanceMetadata.show('streamdata')">get webradio stream infos</button>
+            <div id="streamdata"> stream infos </div>
         </div>
         <div id="webradios-lists">
             <section>
