use custom mrp set metadataMode

--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
 <head>
     <title>Webradios sweet selection</title>
-    <script type="text/javascript" src="https://hosted.muses.org/mrp.js"></script>
-    <script type="text/javascript" src="metadata-decoder/metadata-decoder.js"></script>
+    <script type="text/javascript" src="mrp_dvdn.js"></script>
     <script type="text/javascript" src="radioplayer.js"></script>
     <script type="text/javascript" src="webradios_care.js"></script>
     <link rel="stylesheet" type="text/css" href="main.css">
@@ -18,8 +17,6 @@
         <div id="player-wrapper">
             emplacement du player
             <script>returnPlayer();</script>
-            <button onclick="instanceMetadata.show('streamdata')">get webradio stream infos</button>
-            <div id="streamdata"> stream infos </div>
         </div>
         <div id="webradios-lists">
             <section>
