--- a/index.html
+++ b/index.html
@@ -15,9 +15,13 @@
     </header>
     <content>
         <div id="player-wrapper">
-            emplacement du player
-            <script>returnPlayer();</script>
+            <div id="player">
+                emplacement du player
+                <script>returnPlayer();</script>
+            </div>
+            <div id="metadata-display"></div>
         </div>
+
         <div id="webradios-lists">
             <section>
                 <h2 class="list-heading">Rock</h2>
