--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Webradios sweet selection</title>
+    <script type="text/javascript" src="config.js"></script>
     <script type="text/javascript" src="https://hosted.muses.org/mrp.js"></script>
     <script type="text/javascript" src="radioplayer.js"></script>
     <script type="text/javascript" src="webradios_care.js"></script>
