--- a/index.html
+++ b/index.html
@@ -17,49 +17,10 @@
     <content>
         <div id="player-wrapper">
             emplacement du player
-            <script>returnPlayer();</script>
+            <script type="text/javascript">returnPlayer();</script>
         </div>
         <div id="webradios-lists">
-            <section>
-                <h2 class="list-heading">Rock</h2>
-                <ul class="rock">
-                </ul>
-            </section>
-            <section>
-                <h2 class="list-heading">Electronique</h2>
-                <ul class="electronic">
-                </ul>
-            </section>
-            <section>
-                <h2 class="list-heading">Funk</h2>
-                <ul class="funk">
-                </ul>
-            </section>
-            <section>
-                <h2 class="list-heading">Reggea, Ska</h2>
-                <ul class="reggae">
-                </ul>
-            </section>
-            <section>
-                <h2 class="list-heading">African, Latino</h2>
-                <ul class="african latino">
-                </ul>
-            </section>
-            <section>
-                <h2 class="list-heading">Bandes originales</h2>
-                <ul class="soundtracks">
-                </ul>
-            </section>
-            <section>
-                <h2 class="list-heading">Conversations</h2>
-                <ul class="talk">
-                </ul>
-            </section>
-             <section>
-                <h2 class="list-heading">Divers</h2>
-                <ul class="other">
-                </ul>
-            </section>
+            <script type="text/javascript">returnSections();</script>
         </div>
     </content>
     <footer>
