--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
                 </ul>
             </section>
             <section>
+                <h2 class="list-heading">Classique</h2>
+                <ul class="classical">
+                </ul>
+            </section>
+            <section>
                 <h2 class="list-heading">Bandes originales</h2>
                 <ul class="soundtracks">
                 </ul>
