--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
             emplacement du player
             <script>returnPlayer();</script>
         </div>
+        <ul id="webradio-infos">
+            <li class="webradio-title">...</li>
+        </ul>
         <div id="webradios-lists">
             <section>
                 <h2 class="list-heading">Rock</h2>
