--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1>webradios sweet selection</h1>
         <p>Cliquez sur la radio que vous souhaitez &eacutecouter</p>
         <div id="player-wrapper">
-            emplacement du player
+            stream player
             <script type="text/javascript">returnPlayer();</script>
         </div>
         <ul id="webradio-infos">
@@ -26,6 +26,7 @@
     <content>
 
         <div id="webradios-lists">
+            webradios list
             <script type="text/javascript">returnSections();</script>
         </div>
     </content>
