--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script type="text/javascript" src="config.js"></script>
     <script type="text/javascript" src="https://hosted.muses.org/mrp.js"></script>
     <script type="text/javascript" src="radioplayer.js"></script>
+    <script type="text/javascript" src="metadata.js"></script>
     <script type="text/javascript" src="webradios_care.js"></script>
     <link rel="stylesheet" type="text/css" href="main.css">
     <link href="favicon.ico" rel="shortcut icon">
