--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Webradios sweet selection</title>
     <script type="text/javascript" src="config.js"></script>
     <script type="text/javascript" src="https://hosted.muses.org/mrp.js"></script>
-    <script type="text/javascript" src="radioplayer.js"></script>
     <script type="text/javascript" src="metadata.js"></script>
+    <script type="text/javascript" src="radioplayer.js"></script>
     <script type="text/javascript" src="webradios_care.js"></script>
     <link rel="stylesheet" type="text/css" href="main.css">
     <link href="favicon.ico" rel="shortcut icon">
@@ -21,7 +21,8 @@
             <script type="text/javascript">returnPlayer();</script>
         </div>
         <ul id="webradio-infos">
-            <li class="webradio-title">...</li>
+            <li class="webradio-name"><a href="">...</a></li>
+            <li class="webradio-metadata"></li>
         </ul>
     </header>
     <content>
