get metadata link

--- a/index.html
+++ b/index.html
@@ -16,14 +16,16 @@
     <header>
         <h1>webradios sweet selection</h1>
         <p>Cliquez sur la radio que vous souhaitez &eacutecouter</p>
-        <div id="player-wrapper">
+        <div id="player-wrapper" class="head">
             stream player
             <script type="text/javascript">returnPlayer();</script>
         </div>
-        <ul id="webradio-infos">
-            <li class="webradio-name"><a href="">...</a></li>
-            <li class="webradio-metadata"></li>
-        </ul>
+        <div id="infos-wrapper" class="head">
+            <div id="webradio-infos">
+                <div id="webradio-name"></div>
+                <div id="webradio-metadata"></div>
+            </div>
+        </div>
     </header>
     <content>
         <div id="webradios-lists">
