--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
         <div id="infos-wrapper" class="head">
             <div id="webradio-infos">
-                <div id="webradio-name"></div>
+                <div id="webradio-name">...</div>
                 <div id="webradio-metadata"></div>
             </div>
         </div>
