--- a/index.html
+++ b/index.html
@@ -21,10 +21,8 @@
             <script type="text/javascript">returnPlayer();</script>
         </div>
         <div id="infos-wrapper" class="head">
-            <div id="webradio-infos">
-                <div id="webradio-name">...</div>
-                <div id="webradio-metadata"></div>
-            </div>
+                <h2 id="webradio-name" class="info">...</h2>
+                <span id="webradio-metadata" class="info"></span>
         </div>
     </header>
     <content>
