--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@
     </content>
     <footer>
         <small>
-            2020 // source code <a href="https://github.com/dvdn/webradios" target="_blank">dvdn/webradios</a>
+            last update 04/2021
+            <span>
+                source code <a href="https://github.com/dvdn/webradios" target="_blank">dvdn/webradios</a>
+            </span>
         </small>
     </footer>
 </body>
