--- a/check/index.html
+++ b/check/index.html
@@ -23,7 +23,7 @@
     </content>
     <footer>
         <small>
-            2021 // source code <a href="https://github.com/dvdn/webradios" target="_blank">dvdn/webradios</a>
+            source code <a href="https://github.com/dvdn/webradios" target="_blank">dvdn/webradios</a>
         </small>
     </footer>
 </body>
