--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header>
-        <h1>webradios sweet selection</h1>
+        <h1>Webradios Sweet Selection</h1>
         <p>Cliquez sur la radio que vous souhaitez &eacutecouter</p>
         <div id="player-wrapper" class="head">
             stream player
@@ -36,7 +36,7 @@
     </content>
     <footer>
         <small>
-            last update 07/2021
+            last update 08/2023
             <span>
                 source code <a href="https://github.com/dvdn/webradios" target="_blank">dvdn/webradios</a>
             </span>
