Check table, minor css, some radios update

--- a/check/index.html
+++ b/check/index.html
@@ -15,7 +15,9 @@
     </header>
     <content>
         <div id="webradios-lists">
-            <table><tr><td>Name</td><td>Url stream</td><td>Validity</td></tr></table>
+            <table>
+                <tr><td>name</td><td>validity</td><td>stream url</td></tr>
+            </table>
             <script type="text/javascript">
                     readDataFile("../webradios.json", returnBrokenUrls);
             </script>
@@ -23,7 +25,7 @@
     </content>
     <footer>
         <small>
-            2021 // source code <a href="https://github.com/dvdn/webradios" target="_blank">dvdn/webradios</a>
+            2023 // source code <a href="https://github.com/dvdn/webradios" target="_blank">dvdn/webradios</a>
         </small>
     </footer>
 </body>
