--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             <script type="text/javascript">returnPlayer();</script>
         </div>
         <div id="infos-wrapper" class="head">
-                <h2 id="webradio-name" class="info">...</h2>
-                <span id="webradio-metadata" class="info"></span>
+                <h2 id="webradio-name" title="go to radio website">...</h2>
+                <span id="webradio-metadata" title="get what song is streaming now"></span>
         </div>
     </header>
     <content>
