Style and webradios update (#20)
* CSS round btns

* Check table, minor css, some radios update

* Some radios update

* Miami Bass FM removal

* HipHop radios update

* Scratch radio removal

* Some radios update

* Css minor

--- a/check/index.html
+++ b/check/index.html
@@ -15,7 +15,9 @@
     </header>
     <content>
         <div id="webradios-lists">
-            <table><tr><td>Name</td><td>Url stream</td><td>Validity</td></tr></table>
+            <table>
+                <tr><td>name</td><td>validity</td><td>stream url</td></tr>
+            </table>
             <script type="text/javascript">
                     readDataFile("../webradios.json", returnBrokenUrls);
             </script>
